# kotodama

./: .gitignore  AGENTS.md  CMakeLists.txt  MECAB_PLAN.md  README.md  RELEASE.md  UBIQUITOUS_LANGUAGE.md  build_and_run.sh  com.jeremyrclark.kotodama.desktop  com.jeremyrclark.kotodama.yml  kotodama.rc  release_linux.sh  release_macos.sh  release_windows.bat  run_tests.sh
.github/workflows/: build.yml
docs/: index.html  tokenization-and-highlighting.md
include/kotodama/: aimanager.h  backupmanager.h  constants.h  databasemanager.h  ebookviewer.h  ebookviewmodel.h  highlightersyntax.h  ilanguageprovider.h  importvocabdialog.h  itermstore.h  languageconfig.h  languageeditdialog.h  languagemanager.h  languagemanagerdialog.h  languagemodulemanager.h  languageselectiondialog.h  languageselectionwidget.h  librarymanager.h  mainwindow.h  mainwindowmodel.h  mecabtokenizer.h  progresscalculator.h  regextokenizer.h  settingsdialog.h  singleinstanceguard.h  term.h  terminfopanel.h  termmanager.h  textcard.h  thememanager.h  tokenizer.h  tokenizerbackend.h  trienode.h
resources/: resources.qrc
resources/icons/: Kotodama.icns
src/: aimanager.cpp  backupmanager.cpp  databasemanager.cpp  ebookviewer.cpp  ebookviewmodel.cpp  highlightersyntax.cpp  importvocabdialog.cpp  languageconfig.cpp  languageeditdialog.cpp  languagemanager.cpp  languagemanagerdialog.cpp  languagemodulemanager.cpp  languageselectiondialog.cpp  languageselectionwidget.cpp  librarymanager.cpp  main.cpp  mainwindow.cpp  mainwindowmodel.cpp  mecabtokenizer.cpp  progresscalculator.cpp  regextokenizer.cpp  settingsdialog.cpp  singleinstanceguard.cpp  terminfopanel.cpp  termmanager.cpp  textcard.cpp  thememanager.cpp  tokenizer.cpp  trienode.cpp
tests/: README.md  simple_test_main.cpp  test_main.cpp  tst_backupmanager.cpp  tst_databasemanager.cpp  tst_ebookviewmodel.cpp  tst_languageconfig.cpp  tst_librarymanager.cpp  tst_mainwindowmodel.cpp  tst_mecabtokenizer.cpp  tst_regextokenizer.cpp  tst_singleinstanceguard.cpp  tst_termmanager.cpp  tst_tokenizer.cpp  tst_trienode.cpp
